--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularfire2": "^5.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.4.1",
+    "moment": "^2.24.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
